--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,15 +1,17 @@
 {
     "editor.fontFamily": "'Monaco', 'WenQuanYi Micro Hei', 'Noto Color Emoji'",
     "editor.fontSize": 16,
+    "editor.fontLigatures": true,
     "editor.formatOnType": true,
     "editor.lineHeight": 25,
     "editor.renderIndentGuides": true,
-    "editor.tabCompletion": true,
-    "editor.acceptSuggestionOnEnter": false,
+    "editor.acceptSuggestionOnEnter": "off",
     "editor.dragAndDrop": true,
+    "editor.multiCursorModifier": "ctrlCmd",
+    "editor.minimap.enabled": false,
     "editor.snippetSuggestions": "inline",
     "editor.stablePeek": true,
-    "terminal.integrated.fontFamily": "'Monaco', 'WenQuanYi Micro Hei', 'Noto Color Emoji'",
+    "terminal.integrated.fontFamily": "'Monaco', 'WenQuanYi Micro Hei Mono', 'Noto Color Emoji'",
     "terminal.integrated.fontSize": 15,
     "git.confirmSync": false,
     "window.menuBarVisibility": "toggle",
@@ -26,6 +28,37 @@
     "files.insertFinalNewline": true,
     "explorer.openEditors.visible": 0,
     "diffEditor.renderSideBySide": false,
-    "vetur.format.html.wrap_attributes": "force-aligned",
-    "auto-close-tag.SublimeText3Mode": true
+    "vetur.format.html.wrap_attributes": "force",
+    "auto-close-tag.fullMode": true,
+    "auto-close-tag.activationOnLanguage": [
+        "html",
+        "xml",
+        "php",
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact",
+        "plaintext",
+        "markdown",
+        "razor",
+        "vue"
+    ],
+    "auto-rename-tag.activationOnLanguage": [
+        "html",
+        "xml",
+        "php",
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact",
+        "plaintext",
+        "markdown",
+        "razor",
+        "vue"
+    ],
+    "git.enableSmartCommit": true,
+    "gitlens.codeLens.enabled": false,
+    "npm-intellisense.scanDevDependencies": true,
+    "npm-intellisense.showBuildInLibs": true,
+    "npm-intellisense.importLinebreak": ";\n"
 }
