--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,34 +1,67 @@
 {
-    "editor.fontFamily": "'Monaco', 'WenQuanYi Micro Hei', 'Noto Color Emoji'",
+    "editor.fontFamily": "'Monaco', 'WenQuanYi Micro Hei', 'Noto Emoji'",
     "editor.fontSize": 16,
     "editor.fontLigatures": true,
     "editor.formatOnType": true,
     "editor.lineHeight": 25,
+    "editor.rulers": [
+        80
+    ],
     "editor.renderIndentGuides": true,
+    "editor.renderWhitespace": "all",
+    "editor.renderControlCharacters": true,
+    "editor.roundedSelection": false,
     "editor.acceptSuggestionOnEnter": "off",
+    "editor.accessibilitySupport": "off",
     "editor.dragAndDrop": true,
     "editor.multiCursorModifier": "ctrlCmd",
     "editor.minimap.enabled": false,
-    "editor.snippetSuggestions": "inline",
-    "editor.stablePeek": true,
-    "terminal.integrated.fontFamily": "'Monaco', 'WenQuanYi Micro Hei Mono', 'Noto Color Emoji'",
-    "terminal.integrated.fontSize": 15,
-    "git.confirmSync": false,
-    "window.menuBarVisibility": "toggle",
-    "workbench.iconTheme": "vs-nomo-dark",
-    "emmet.syntaxProfiles": {
-        "vue-html": "html",
-        "vue": "html"
+    "editor.quickSuggestions": {
+        "other": true,
+        "comments": false,
+        "strings": true
     },
+    "editor.snippetSuggestions": "inline",
+    "editor.acceptSuggestionOnCommitCharacter": false,
+    "editor.cursorBlinking": "phase",
+    "editor.stablePeek": true,
+    "diffEditor.renderSideBySide": false,
+    "files.insertFinalNewline": true,
+    "workbench.iconTheme": "vs-nomo-dark",
+    "window.menuBarVisibility": "toggle",
+    "explorer.openEditors.visible": 0,
+    "search.exclude": {
+        "**/dist": true,
+        "**/build": true,
+        "**/yarn.lock": true,
+        "**/node_modules": true,
+        "**/bower_components": true
+    },
+    "search.useIgnoreFilesByDefault": true,
+    "debug.inlineValues": true,
+    "html.suggest.angular1": false,
+    "html.suggest.ionic": false,
+    "markdown.preview.fontFamily": "'Noto Sans', 'Noto Sans CJK SC', 'Noto Color Emoji'",
+    "terminal.integrated.fontFamily": "'Monaco', 'WenQuanYi Micro Hei Mono', 'Noto Emoji'",
+    "terminal.integrated.fontSize": 15,
+    "terminal.integrated.scrollback": 10000,
+    "git.confirmSync": false,
+    "git.enableSmartCommit": true,
+    // Extensions Settings
+    // ES Lint
+    "emmet.includeLanguages": {
+        "markdown": "html",
+        "vue-html": "html"
+    },
+    "emmet.triggerExpansionOnTab": true,
     "eslint.validate": [
         "javascript",
         "javascriptreact",
         "vue"
     ],
-    "files.insertFinalNewline": true,
-    "explorer.openEditors.visible": 0,
-    "diffEditor.renderSideBySide": false,
+    // Vetur
     "vetur.format.html.wrap_attributes": "force",
+    // Auto Close Tag
     "auto-close-tag.fullMode": true,
     "auto-close-tag.activationOnLanguage": [
         "html",
@@ -43,6 +76,7 @@
         "razor",
         "vue"
     ],
+    // Auto Rename Tag
     "auto-rename-tag.activationOnLanguage": [
         "html",
         "xml",
@@ -56,8 +90,9 @@
         "razor",
         "vue"
     ],
-    "git.enableSmartCommit": true,
+    // GitLens
     "gitlens.codeLens.enabled": false,
+    // npm intellisense
     "npm-intellisense.scanDevDependencies": true,
     "npm-intellisense.showBuildInLibs": true,
     "npm-intellisense.importLinebreak": ";\n"
