use 'Roboto' for sans; 'Fira Mono' for symbol

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -6,10 +6,10 @@
   <test name="family">
    <string>sans-serif</string>
   </test>
-  <edit name="family" mode="prepend" binding="strong">
-   <string>Noto Sans</string>
+  <edit mode="prepend" binding="strong" name="family">
+   <string>Roboto</string>
+   <string>Fira Mono</string>
    <string>Noto Sans CJK SC</string>
-   <string>WenQuanYi Micro Hei</string>
    <string>Noto Color Emoji</string>
   </edit>
  </match>
@@ -17,8 +17,9 @@
   <test name="family">
    <string>serif</string>
   </test>
-  <edit name="family" mode="prepend" binding="strong">
+  <edit mode="prepend" binding="strong" name="family">
    <string>Noto Serif</string>
+   <string>Fira Mono</string>
    <string>Noto Serif CJK SC</string>
    <string>Noto Color Emoji</string>
   </edit>
@@ -27,10 +28,13 @@
   <test name="family">
    <string>monospace</string>
   </test>
-  <edit name="family" mode="prepend" binding="strong">
+  <edit mode="prepend" binding="strong" name="family">
    <string>Monaco</string>
+   <string>Fira Mono</string>
+   <string>DejaVu Sans Mono</string>
    <string>WenQuanYi Micro Hei Mono</string>
    <string>Noto Emoji</string>
   </edit>
  </match>
+ <dir>~/.fonts</dir>
 </fontconfig>
