--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,40 +1,42 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
- <!-- created by WenQuanYi FcDesigner v0.5 -->
- <match>
-  <test name="family">
-   <string>sans-serif</string>
-  </test>
-  <edit mode="prepend" binding="strong" name="family">
-   <string>Roboto</string>
-   <string>Fira Mono</string>
-   <string>Noto Sans CJK SC</string>
-   <string>Noto Color Emoji</string>
-  </edit>
- </match>
- <match>
-  <test name="family">
-   <string>serif</string>
-  </test>
-  <edit mode="prepend" binding="strong" name="family">
-   <string>Noto Serif</string>
-   <string>Fira Mono</string>
-   <string>Noto Serif CJK SC</string>
-   <string>Noto Color Emoji</string>
-  </edit>
- </match>
- <match>
-  <test name="family">
-   <string>monospace</string>
-  </test>
-  <edit mode="prepend" binding="strong" name="family">
-   <string>Monaco</string>
-   <string>Fira Mono</string>
-   <string>DejaVu Sans Mono</string>
-   <string>WenQuanYi Micro Hei Mono</string>
-   <string>Noto Emoji</string>
-  </edit>
- </match>
- <dir>~/.fonts</dir>
+
+	<match>
+		<test name="family">
+			<string>sans-serif</string>
+		</test>
+		<edit mode="prepend" binding="strong" name="family">
+			<string>Roboto</string>
+			<string>MPH 2B Damase</string>
+			<string>Noto Sans Symbols</string>
+			<string>Noto Sans CJK SC</string>
+			<string>Blobmoji</string>
+		</edit>
+	</match>
+	<match>
+		<test name="family">
+			<string>serif</string>
+		</test>
+		<edit mode="prepend" binding="strong" name="family">
+			<string>Noto Serif</string>
+			<string>MPH 2B Damase</string>
+			<string>Noto Sans Symbols</string>
+			<string>Noto Serif CJK SC</string>
+			<string>Blobmoji</string>
+		</edit>
+	</match>
+	<match>
+		<test name="family">
+			<string>monospace</string>
+		</test>
+		<edit mode="prepend" binding="strong" name="family">
+			<string>Roboto Mono</string>
+			<string>Iosevka Term</string>
+			<string>Noto Sans Symbols</string>
+			<string>Noto Sans Mono CJK SC</string>
+			<string>Symbola</string>
+		</edit>
+	</match>
+
 </fontconfig>
