--- a/.config/libinput-gestures.conf
+++ b/.config/libinput-gestures.conf
@@ -51,10 +51,10 @@
 #gesture swipe down	xdotool key super+Page_Up
 
 # Browser go forward (works only for Xorg, and Xwayland clients)
-#gesture swipe left	xdotool key alt+Right
+#gesture swipe left	xdotool key super+Right
 
 # Browser go back (works only for Xorg, and Xwayland clients)
-#gesture swipe right	xdotool key alt+Left
+#gesture swipe right	xdotool key super+Left
 
 # Example of 8 static workspaces, e.g. using KDE virtual-desktops,
 # arranged in 2 rows of 4 across using swipe up/down/left/right to
@@ -85,8 +85,7 @@ gesture swipe right	3	_internal --row=2 ws_down
 #
 #device all
 
-gesture swipe up	4	xdotool key alt+ctrl+shift+Up
-gesture swipe down	4	xdotool key alt+ctrl+shift+Down
-gesture swipe left	4	xdotool key alt+ctrl+shift+Left
-gesture swipe right	4	xdotool key alt+ctrl+shift+Right
-
+gesture swipe up	4	xdotool key super+ctrl+shift+Up
+gesture swipe down	4	xdotool key super+ctrl+shift+Down
+gesture swipe left	4	xdotool key super+ctrl+shift+Left
+gesture swipe right	4	xdotool key super+ctrl+shift+Right
