refine fontconfig again

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,41 +2,124 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
 
-	<match>
-		<test name="family">
+<!-- fallback for not installed fonts -->
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>Courier New</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>monospace</string>
+		</edit>
+	</match>
+
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>SimSun</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>serif</string>
+		</edit>
+	</match>
+
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>宋体</string>
+		</test>
+		<edit name="family" mode="assign">
+			<string>serif</string>
+		</edit>
+	</match>
+
+<!-- Default font for the zh_CN locale (no fc-match pattern) -->
+	<match target="pattern">
+		<test name="lang">
+			<string>zh-cn</string>
+		</test>
+		<test qual="any" name="family">
 			<string>sans-serif</string>
 		</test>
-		<edit mode="prepend" binding="strong" name="family">
-			<string>Roboto</string>
-			<string>MPH 2B Damase</string>
-			<string>Noto Sans Symbols</string>
+		<edit name="family" mode="prepend" binding="strong">
 			<string>Noto Sans CJK SC</string>
-			<string>Blobmoji</string>
 		</edit>
 	</match>
+
 	<match>
-		<test name="family">
+		<test compare="contains" name="lang">
+			<string>zh-cn</string>
+		</test>
+		<test qual="any" name="family">
 			<string>serif</string>
 		</test>
-		<edit mode="prepend" binding="strong" name="family">
-			<string>Noto Serif</string>
-			<string>MPH 2B Damase</string>
-			<string>Noto Sans Symbols</string>
+		<edit mode="prepend" name="family" binding="strong">
 			<string>Noto Serif CJK SC</string>
-			<string>Blobmoji</string>
 		</edit>
 	</match>
-	<match>
-		<test name="family">
+
+<!-- Default sans-serif font -->
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>sans-serif</string>
+		</test>
+		<edit name="family" mode="prepend">
+			<string>Roboto</string>
+			<string>MPH 2B Damase</string>
+		</edit>
+	</match>
+
+<!-- Default serif fonts -->
+	<match target="pattern">
+		<test qual="any" name="family">
+			<string>serif</string>
+		</test>
+		<edit name="family" mode="prepend">
+			<string>Noto Serif</string>
+		</edit>
+	</match>
+
+<!-- Default monospace fonts -->
+	<match target="pattern">
+		<test qual="any" name="family">
 			<string>monospace</string>
 		</test>
-		<edit mode="prepend" binding="strong" name="family">
-			<string>Roboto Mono</string>
+		<edit name="family" mode="prepend" binding="strong">
+			<string>Droid Sans Mono Slashed</string>
+			<string>Hack</string>
 			<string>Iosevka Term</string>
 			<string>Noto Sans Symbols</string>
-			<string>Noto Sans Mono CJK SC</string>
-			<string>Symbola</string>
+			<string>Noto Sans Symbols2</string>
 		</edit>
 	</match>
+
+<!-- Fallback fonts preference order -->
+	<alias>
+		<family>sans-serif</family>
+		<prefer>
+			<family>Noto Sans CJK SC</family>
+			<family>Noto Sans CJK TC</family>
+			<family>Noto Sans CJK JP</family>
+			<family>Noto Sans CJK KR</family>
+			<family>Blobmoji</family>
+		</prefer>
+	</alias>
+	<alias>
+		<family>serif</family>
+		<prefer>
+			<family>Noto Serif CJK SC</family>
+			<family>Noto Serif CJK TC</family>
+			<family>Noto Serif CJK JP</family>
+			<family>Noto Serif CJK KR</family>
+			<family>Blobmoji</family>
+		</prefer>
+	</alias>
+	<alias>
+		<family>monospace</family>
+		<prefer>
+			<family>Noto Sans Mono CJK SC</family>
+			<family>Noto Sans Mono CJK TC</family>
+			<family>Noto Sans Mono CJK JP</family>
+			<family>Noto Sans Mono CJK KR</family>
+			<family>Blobmoji</family>
+		</prefer>
+	</alias>
 
 </fontconfig>
