--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,125 +1,48 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-
-<!-- fallback for not installed fonts -->
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>Courier New</string>
-		</test>
-		<edit name="family" mode="assign">
-			<string>monospace</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>SimSun</string>
-		</test>
-		<edit name="family" mode="assign">
-			<string>serif</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>宋体</string>
-		</test>
-		<edit name="family" mode="assign">
-			<string>serif</string>
-		</edit>
-	</match>
-
-<!-- Default font for the zh_CN locale (no fc-match pattern) -->
-	<match target="pattern">
-		<test name="lang">
-			<string>zh-cn</string>
-		</test>
-		<test qual="any" name="family">
-			<string>sans-serif</string>
-		</test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>Noto Sans CJK SC</string>
-		</edit>
-	</match>
-
-	<match>
-		<test compare="contains" name="lang">
-			<string>zh-cn</string>
-		</test>
-		<test qual="any" name="family">
-			<string>serif</string>
-		</test>
-		<edit mode="prepend" name="family" binding="strong">
-			<string>Noto Serif CJK SC</string>
-		</edit>
-	</match>
-
-<!-- Default sans-serif font -->
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>sans-serif</string>
-		</test>
-		<edit name="family" mode="prepend">
-			<string>Roboto</string>
-			<string>MPH 2B Damase</string>
-		</edit>
-	</match>
-
-<!-- Default serif fonts -->
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>serif</string>
-		</test>
-		<edit name="family" mode="prepend">
-			<string>Noto Serif</string>
-		</edit>
-	</match>
-
-<!-- Default monospace fonts -->
-	<match target="pattern">
-		<test qual="any" name="family">
-			<string>monospace</string>
-		</test>
-		<edit name="family" mode="prepend" binding="strong">
-			<string>Droid Sans Mono Slashed</string>
-			<string>Hack</string>
-			<string>Iosevka Term</string>
-			<string>Noto Sans Symbols</string>
-			<string>Noto Sans Symbols2</string>
-		</edit>
-	</match>
-
-<!-- Fallback fonts preference order -->
-	<alias>
-		<family>sans-serif</family>
-		<prefer>
-			<family>Noto Sans CJK SC</family>
-			<family>Noto Sans CJK TC</family>
-			<family>Noto Sans CJK JP</family>
-			<family>Noto Sans CJK KR</family>
-			<family>Blobmoji</family>
-		</prefer>
-	</alias>
-	<alias>
-		<family>serif</family>
-		<prefer>
-			<family>Noto Serif CJK SC</family>
-			<family>Noto Serif CJK TC</family>
-			<family>Noto Serif CJK JP</family>
-			<family>Noto Serif CJK KR</family>
-			<family>Blobmoji</family>
-		</prefer>
-	</alias>
-	<alias>
-		<family>monospace</family>
-		<prefer>
-			<family>Noto Sans Mono CJK SC</family>
-			<family>Noto Sans Mono CJK TC</family>
-			<family>Noto Sans Mono CJK JP</family>
-			<family>Noto Sans Mono CJK KR</family>
-			<family>Blobmoji</family>
-		</prefer>
-	</alias>
-
+ <!-- sans-serif -->
+ <match target="pattern">
+  <test qual="any" name="family">
+   <string>sans-serif</string>
+  </test>
+  <edit mode="prepend" name="family" binding="strong">
+   <string>Roboto</string>
+  </edit>
+  <edit mode="append" name="family">
+   <string>Noto Sans CJK SC</string>
+   <string>Blobmoji</string>
+  </edit>
+ </match>
+ <!-- serif -->
+ <match target="pattern">
+  <test qual="any" name="family">
+   <string>serif</string>
+  </test>
+  <edit mode="prepend" name="family" binding="strong">
+   <string>Noto Serif</string>
+  </edit>
+  <edit mode="append" name="family">
+   <string>Noto Serif CJK SC</string>
+   <string>Blobmoji</string>
+  </edit>
+ </match>
+ <!-- monospace -->
+ <match target="pattern">
+  <test qual="any" name="family">
+   <string>monospace</string>
+  </test>
+  <edit mode="prepend" name="family" binding="strong">
+   <string>Droid Sans Mono Slashed</string>
+   <string>Hack</string>
+   <string>Fira Mono</string>
+   <string>DejaVu Sans Mono</string>
+   <string>Sarasa Mono SC</string>
+   <string>Noto Sans Mono CJK SC</string>
+  </edit>
+  <edit mode="append" name="family" binding="strong">
+   <string>Blobmoji</string>
+  </edit>
+ </match>
+ <dir>~/.fonts</dir>
 </fontconfig>
