--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,45 +2,41 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
  <!-- sans-serif -->
- <match target="pattern">
-  <test qual="any" name="family">
+ <match>
+  <test name="family">
    <string>sans-serif</string>
   </test>
-  <edit mode="prepend" name="family" binding="strong">
+  <edit name="family" mode="prepend">
    <string>Roboto</string>
-  </edit>
-  <edit mode="append" name="family">
+   <string>DejaVu Sans</string>
    <string>Noto Sans CJK SC</string>
    <string>Blobmoji</string>
   </edit>
  </match>
  <!-- serif -->
- <match target="pattern">
-  <test qual="any" name="family">
+ <match>
+  <test name="family">
    <string>serif</string>
   </test>
-  <edit mode="prepend" name="family" binding="strong">
+  <edit name="family" mode="prepend">
    <string>Noto Serif</string>
-  </edit>
-  <edit mode="append" name="family">
+   <string>DejaVu Serif</string>
    <string>Noto Serif CJK SC</string>
    <string>Blobmoji</string>
   </edit>
  </match>
  <!-- monospace -->
- <match target="pattern">
-  <test qual="any" name="family">
+ <match>
+  <test name="family">
    <string>monospace</string>
   </test>
-  <edit mode="prepend" name="family" binding="strong">
+  <edit name="family" binding="strong" mode="prepend">
    <string>Droid Sans Mono Slashed</string>
    <string>Hack</string>
    <string>Fira Mono</string>
    <string>DejaVu Sans Mono</string>
    <string>Sarasa Mono SC</string>
    <string>Noto Sans Mono CJK SC</string>
-  </edit>
-  <edit mode="append" name="family" binding="strong">
    <string>Blobmoji</string>
   </edit>
  </match>
