--- a/.config/aria2/conf.ini
+++ b/.config/aria2/conf.ini
@@ -1,9 +1,7 @@
-#用户名
-#rpc-user=user
-#密码
-#rpc-passwd=passwd
+#credit: https://binux.blog/2012/12/aria2-examples/
+#manual: https://aria2.github.io/manual/en/html/aria2c.html
 #设置加密的密钥
-#rpc-secret=secret
+#rpc-secret=10b6692d-31fe-4011-9fe2-63c311f117ff
 #允许rpc
 enable-rpc=true
 #允许所有来源, web界面跨域权限需要
@@ -23,31 +21,36 @@ max-concurrent-downloads=5
 #断点续传
 continue=true
 #同服务器连接数
-max-connection-per-server=16
+max-connection-per-server=32
 #最小文件分片大小, 下载线程数上限取决于能分出多少片, 对于小文件重要
-min-split-size=2M
+min-split-size=1M
 #单文件最大线程数, 路由建议值: 5
-split=32
+split=64
 #下载速度限制
-max-overall-download-limit=0
+#max-overall-download-limit=0
 #单文件速度限制
-max-download-limit=0
+#max-download-limit=0
 #上传速度限制
-max-overall-upload-limit=0
+#max-overall-upload-limit=0
 #单文件速度限制
-max-upload-limit=0
+#max-upload-limit=0
 #断开速度过慢的连接
 #lowest-speed-limit=0
-#验证用，需要1.16.1之后的release版本
+#Set an http referrer (Referer) 验证用，需要1.16.1之后的release版本
 #referer=*
 #文件保存路径, 默认为当前启动位置
-dir=/home/rocka/Downloads/
+dir=/home/rocka/Downloads
 #文件缓存, 使用内置的文件缓存, 如果你不相信Linux内核文件缓存和磁盘内置缓存时使用, 需要1.16及以上版本
 #disk-cache=0
 #另一种Linux文件缓存方式, 使用前确保您使用的内核支持此选项, 需要1.15及以上版本(?)
 #enable-mmap=true
 #文件预分配, 能有效降低文件碎片, 提高磁盘性能. 缺点是预分配时间较长
 #所需时间 none < falloc ? trunc << prealloc, falloc和trunc需要文件系统和内核支持
-file-allocation=prealloc
-#不进行证书校验
-check-certificate=false
+file-allocation=falloc
+#Save error/unfinished downloads to FILE on exit.
+save-session=/home/rocka/.config/aria2.session
+#Event Hook
+#https://aria2.github.io/manual/en/html/aria2c.html#event-hook
+on-download-start=/home/rocka/.config/aria2/download-start.sh
+on-download-complete=/home/rocka/.config/aria2/download-finish.sh
+on-download-error=/home/rocka/.config/aria2/download-error.sh
