--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,39 +2,32 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
  <!-- sans-serif -->
- <match>
-  <test name="family">
-   <string>sans-serif</string>
-  </test>
-  <edit name="family" mode="prepend">
-   <string>Roboto</string>
-   <string>DejaVu Sans</string>
-   <string>Noto Sans CJK SC</string>
-   <string>Blobmoji</string>
-  </edit>
- </match>
+ <alias>
+  <family>sans-serif</family>
+  <prefer>
+   <family>Roboto</family>
+   <family>Noto Sans</family>
+   <family>DejaVu Sans</family>
+   <family>Noto Sans CJK SC</family>
+   <family>Blobmoji</family>
+  </prefer>
+ </alias>
  <!-- serif -->
- <match>
-  <test name="family">
-   <string>serif</string>
-  </test>
-  <edit name="family" mode="prepend">
-   <string>Noto Serif</string>
-   <string>DejaVu Serif</string>
-   <string>Noto Serif CJK SC</string>
-   <string>Blobmoji</string>
-  </edit>
- </match>
+ <alias>
+  <family>serif</family>
+  <prefer>
+   <family>Noto Serif</family>
+   <family>Noto Serif CJK SC</family>
+   <family>Blobmoji</family>
+  </prefer>
+ </alias>
  <!-- monospace -->
  <match>
-  <test name="family">
-   <string>monospace</string>
-  </test>
+  <test name="family"><string>monospace</string></test>
   <edit name="family" binding="strong" mode="prepend">
    <string>Droid Sans Mono Slashed</string>
    <string>Hack</string>
-   <string>Fira Mono</string>
-   <string>DejaVu Sans Mono</string>
+   <string>Noto Sans Mono</string>
    <string>Sarasa Mono SC</string>
    <string>Noto Sans Mono CJK SC</string>
    <string>Blobmoji</string>
