--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,6 +1,8 @@
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
+--ignore-gpu-blacklist
+--enable-gpu-rasterization
+--enable-native-gpu-memory-buffers
+--enable-zero-copy
 --disable-gpu-driver-bug-workarounds
 --enable-accelerated-mjpeg-decode
 --enable-accelerated-video
---enable-gpu-rasterization
---ignore-gpu-blacklist
