--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -23,12 +23,13 @@
  </alias>
  <!-- monospace -->
  <match>
-  <test name="family"><string>monospace</string></test>
-  <edit name="family" binding="strong" mode="prepend">
+  <test name="family">
+   <string>monospace</string>
+  </test>
+  <edit mode="prepend" name="family" binding="strong">
    <string>Droid Sans Mono Slashed</string>
    <string>Hack</string>
    <string>Noto Sans Mono</string>
-   <string>Sarasa Mono SC</string>
    <string>Noto Sans Mono CJK SC</string>
    <string>Blobmoji</string>
   </edit>
