--- a/.config/aria2/conf.ini
+++ b/.config/aria2/conf.ini
@@ -1,7 +1,7 @@
 #credit: https://binux.blog/2012/12/aria2-examples/
 #manual: https://aria2.github.io/manual/en/html/aria2c.html
 #设置加密的密钥
-#rpc-secret=10b6692d-31fe-4011-9fe2-63c311f117ff
+#rpc-secret=$(uuidgen)
 #允许rpc
 enable-rpc=true
 #允许所有来源, web界面跨域权限需要
