--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,8 +1,7 @@
+--enable-features=OverlayScrollbar,OverlayScrollbarFlashAfterAnyScrollUpdate,OverlayScrollbarFlashWhenMouseEnter
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
---ignore-gpu-blacklist
 --enable-gpu-rasterization
 --enable-native-gpu-memory-buffers
---enable-zero-copy
 --disable-gpu-driver-bug-workarounds
 --enable-accelerated-mjpeg-decode
 --enable-accelerated-video
