--- a/.config/fontconfig/conf.d/10-replace.conf
+++ b/.config/fontconfig/conf.d/10-replace.conf
@@ -3,8 +3,41 @@
 <fontconfig>
  <match>
   <test name="family" compare="contains">
-   <string>courier</string>
+   <string>-apple-system</string>
   </test>
+  <edit name="family">
+   <string>sans-serif</string>
+  </edit>
+ </match>
+
+ <match>
+  <test name="family" compare="contains">
+   <string>Arial</string>
+  </test>
+  <edit name="family">
+   <string>sans-serif</string>
+  </edit>
+ </match>
+
+ <match>
+  <test name="family" compare="contains">
+   <string>Helvetica</string>
+  </test>
+  <edit name="family">
+   <string>sans-serif</string>
+  </edit>
+ </match>
+
+ <match>
+  <test name="family" compare="eq">
+   <string>Segoe UI</string>
+  </test>
+  <edit name="family">
+   <string>sans-serif</string>
+  </edit>
+ </match>
+
+ <match>
   <test name="family" compare="contains">
    <string>Courier</string>
   </test>
@@ -12,15 +45,13 @@
    <string>monospace</string>
   </edit>
  </match>
+
  <match>
   <test name="family" compare="contains">
-   <string>文泉驿</string>
+   <string>Consolas</string>
   </test>
-  <test name="family" compare="contains">
-   <string>WenQuanYi</string>
-  </test>
-  <edit name="family">
-   <string>Noto Sans CJK SC</string>
+  <edit name="family" mode="assign_replace">
+   <string>monospace</string>
   </edit>
  </match>
 </fontconfig>
