--- a/.config/fontconfig/conf.d/30-color-emoji.conf
+++ b/.config/fontconfig/conf.d/30-color-emoji.conf
@@ -3,7 +3,31 @@
 <fontconfig>
  <match target="pattern">
   <test name="family" compare="contains">
-   <string>Emoji</string>
+   <string>Color Emoji</string>
+  </test>
+  <edit name="family" mode="assign">
+   <string>Blobmoji</string>
+  </edit>
+ </match>
+ <match target="pattern">
+  <test name="family" compare="contains">
+   <string>Segoe UI Emoji</string>
+  </test>
+  <edit name="family" mode="assign">
+   <string>Blobmoji</string>
+  </edit>
+ </match>
+ <match target="pattern">
+  <test name="family" compare="contains">
+   <string>Twemoji</string>
+  </test>
+  <edit name="family" mode="assign">
+   <string>Blobmoji</string>
+  </edit>
+ </match>
+ <match target="pattern">
+  <test name="family" compare="contains">
+   <string>EmojiOne</string>
   </test>
   <edit name="family" mode="assign">
    <string>Blobmoji</string>
