--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -7,9 +7,9 @@
   <prefer>
    <family>Roboto</family>
    <family>Noto Sans</family>
+   <family>Blobmoji</family>
    <family>DejaVu Sans</family>
    <family>Noto Sans CJK SC</family>
-   <family>Blobmoji</family>
   </prefer>
  </alias>
  <!-- serif -->
@@ -27,12 +27,11 @@
    <string>monospace</string>
   </test>
   <edit mode="prepend" name="family" binding="strong">
-   <string>Droid Sans Mono Slashed</string>
+   <string>Droid Sans Mono W01</string>
    <string>Hack</string>
    <string>Noto Sans Mono</string>
    <string>Noto Sans Mono CJK SC</string>
    <string>Blobmoji</string>
   </edit>
  </match>
- <dir>~/.fonts</dir>
 </fontconfig>
