--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,10 @@
   "rules": {
     "semi": "off",
     "no-console": "off",
+    "no-debugger": "off",
     "no-cond-assign": "off",
     "no-fallthrough": "off",
-    "no-debugger": "off",
-    "no-case-declarations": "off"
+    "no-case-declarations": "off",
+    "require-atomic-updates": "off"
   }
 }
