--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,9 @@
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
 
 ## determine if we should enable 256-colour support
-if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal screen-256color'
+if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ||${TERM} == alacritty ]]" 'set -g default-terminal xterm-256color'
+
+if "[[ ${TERM} == alacritty ]]" 'set-option -g status-position top'
 
 # fish shell
 set-option -g default-shell /usr/bin/fish
