fix chromium vaapi

--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,7 +1,11 @@
 --enable-features=OverlayScrollbar,OverlayScrollbarFlashAfterAnyScrollUpdate,OverlayScrollbarFlashWhenMouseEnter
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
---enable-gpu-rasterization
---enable-native-gpu-memory-buffers
+--use-gl=desktop
 --disable-gpu-driver-bug-workarounds
 --enable-accelerated-mjpeg-decode
+--enable-accelerated-video-decode
 --enable-accelerated-video
+#--enable-native-gpu-memory-buffers
+--enable-gpu-rasterization
+--ignore-gpu-blacklist
+--enable-zero-copy
