--- a/.config/gebaar/gebaard.toml
+++ b/.config/gebaar/gebaard.toml
@@ -1,19 +1,19 @@
 [commands.swipe.three]
 left_up = ""
 right_up = ""
-up = "kwindesktopctl up"
+up = "kwindesktopctl down --desktop"
 left_down = ""
 right_down = ""
-down = "kwindesktopctl down"
-left = "kwindesktopctl left"
-right = "kwindesktopctl right"
+down = "kwindesktopctl up --desktop"
+left = "kwindesktopctl right --desktop"
+right = "kwindesktopctl left --desktop"
 
 [commands.swipe.four]
 left_up = ""
 right_up = ""
-up = "xdotool key super+ctrl+shift+Down"
+up = "kwindesktopctl down --window"
 left_down = ""
 right_down = ""
-down = "xdotool key super+ctrl+shift+Up"
-left = "xdotool key super+ctrl+shift+Right"
-right = "xdotool key super+ctrl+shift+Left"
+down = "kwindesktopctl up --window"
+left = "kwindesktopctl right --window"
+right = "kwindesktopctl left --window"
