--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,11 +1,16 @@
---enable-features=OverlayScrollbar,OverlayScrollbarFlashAfterAnyScrollUpdate,OverlayScrollbarFlashWhenMouseEnter
+--enable-features=OverlayScrollbar,OverlayScrollbarFlashAfterAnyScrollUpdate,OverlayScrollbarFlashWhenMouseEnter,VaapiVideoDecoder
+--disable-features=HardwareMediaKeyHandling,TabHoverCards
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
---use-gl=desktop
---disable-gpu-driver-bug-workarounds
---enable-accelerated-mjpeg-decode
---enable-accelerated-video-decode
---enable-accelerated-video
-#--enable-native-gpu-memory-buffers
---enable-gpu-rasterization
 --ignore-gpu-blacklist
+--enable-gpu-rasterization
 --enable-zero-copy
+#--disable-gpu-driver-bug-workarounds
+#--enable-native-gpu-memory-buffers
+# Hardware video acceleration (Xorg)
+--use-gl=desktop
+#--enable-accelerated-video
+#--enable-accelerated-video-decode
+#--enable-accelerated-mjpeg-decode
+# https://gist.github.com/foutrelis/14e339596b89813aa9c37fd1b4e5d9d5
+--oauth2-client-id=77185425430.apps.googleusercontent.com
+--oauth2-client-secret=OTJgUOQcT7lO7GsGZq2G4IlT
