--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,13 +1,18 @@
+--disable-features=HardwareMediaKeyHandling,UseChromeOSDirectVideoDecoder
 --enable-features=OverlayScrollbar,OverlayScrollbarFlashAfterAnyScrollUpdate,OverlayScrollbarFlashWhenMouseEnter,VaapiVideoDecoder
---disable-features=HardwareMediaKeyHandling,TabHoverCards
+#,UseOzonePlatform
+#--ozone-platform=x11
+--ozone-platform-hint=auto
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
 --ignore-gpu-blacklist
 --enable-gpu-rasterization
 --enable-zero-copy
 #--disable-gpu-driver-bug-workarounds
 #--enable-native-gpu-memory-buffers
-# Hardware video acceleration (Xorg)
+# Hardware video acceleration (XWayland)
 --use-gl=desktop
+# Hardware video acceleration (Xorg)
+#--use-gl=egl
 #--enable-accelerated-video
 #--enable-accelerated-video-decode
 #--enable-accelerated-mjpeg-decode
