--- a/.config/fontconfig/conf.d/10-replace.conf
+++ b/.config/fontconfig/conf.d/10-replace.conf
@@ -3,6 +3,15 @@
 <fontconfig>
  <match>
   <test name="family" compare="contains">
+   <string>ui-sans-serif</string>
+  </test>
+  <edit name="family">
+   <string>sans-serif</string>
+  </edit>
+ </match>
+
+ <match>
+  <test name="family" compare="contains">
    <string>-apple-system</string>
   </test>
   <edit name="family">
@@ -34,6 +43,31 @@
   </test>
   <edit name="family">
    <string>sans-serif</string>
+  </edit>
+ </match>
+
+ <match>
+  <test name="family" compare="contains">
+   <string>Liberation</string>
+  </test>
+  <edit name="family" mode="delete"></edit>
+ </match>
+
+ <match>
+  <test name="family" compare="contains">
+   <string>ui-serif</string>
+  </test>
+  <edit name="family">
+   <string>serif</string>
+  </edit>
+ </match>
+
+ <match>
+  <test name="family" compare="contains">
+   <string>ui-monospace</string>
+  </test>
+  <edit name="family">
+   <string>monospace</string>
   </edit>
  </match>
 
