--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -10,6 +10,8 @@
    <family>Blobmoji</family>
    <family>DejaVu Sans</family>
    <family>Noto Sans CJK SC</family>
+   <family>PowerlineSymbols</family>
+   <family>Symbols Nerd Font</family>
   </prefer>
  </alias>
  <!-- serif -->
@@ -17,8 +19,11 @@
   <family>serif</family>
   <prefer>
    <family>Noto Serif</family>
-   <family>Noto Serif CJK SC</family>
    <family>Blobmoji</family>
+   <family>DejaVu Serif</family>
+   <family>Noto Serif CJK SC</family>
+   <family>PowerlineSymbols</family>
+   <family>Symbols Nerd Font</family>
   </prefer>
  </alias>
  <!-- monospace -->
@@ -26,11 +31,14 @@
   <test name="family">
    <string>monospace</string>
   </test>
-  <edit mode="prepend" name="family" binding="strong">
+  <edit name="family" binding="strong" mode="prepend">
    <string>Droid Sans Mono W01</string>
    <string>Hack</string>
+   <string>DejaVu Sans Mono</string>
    <string>Noto Sans Mono</string>
    <string>Noto Sans Mono CJK SC</string>
+   <string>PowerlineSymbols</string>
+   <string>Symbols Nerd Font</string>
    <string>Blobmoji</string>
   </edit>
  </match>
