adopt plasma 5.25 touchpad gestures

--- a/.config/touchegg/touchegg.conf
+++ b/.config/touchegg/touchegg.conf
@@ -41,52 +41,50 @@
   -->
   <application name="All">
     <gesture type="SWIPE" fingers="3" direction="LEFT">
-      <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Alt_L</modifiers>
-        <keys>Shift_L+Tab</keys>
-        <decreaseKeys>Tab</decreaseKeys>
+      <action type="CHANGE_DESKTOP">
+        <direction>right</direction>
+        <animate>true</animate>
+        <animationPosition>right</animationPosition>
       </action>
     </gesture>
 
     <gesture type="SWIPE" fingers="3" direction="RIGHT">
-      <action type="SEND_KEYS">
-        <repeat>true</repeat>
-        <modifiers>Alt_L</modifiers>
-        <keys>Tab</keys>
-        <decreaseKeys>Shift_L+Tab</decreaseKeys>
+      <action type="CHANGE_DESKTOP">
+        <direction>left</direction>
+        <animate>true</animate>
+        <animationPosition>left</animationPosition>
       </action>
     </gesture>
 
     <gesture type="SWIPE" fingers="3" direction="UP">
-      <action type="RUN_COMMAND">
-        <on>begin</on>
-        <repeat>false</repeat>
-        <command>dbus-send \-\-session \-\-dest=org.kde.kglobalaccel \-\-type=method_call /component/kwin org.kde.kglobalaccel.Component.invokeShortcut string:Overview</command>
+      <action type="CHANGE_DESKTOP">
+        <direction>down</direction>
+        <animate>true</animate>
+        <animationPosition>down</animationPosition>
       </action>
     </gesture>
 
     <gesture type="SWIPE" fingers="3" direction="DOWN">
-      <action type="RUN_COMMAND">
-        <on>begin</on>
-        <repeat>false</repeat>
-        <command>dbus-send \-\-session \-\-dest=org.kde.kglobalaccel \-\-type=method_call /component/kwin org.kde.kglobalaccel.Component.invokeShortcut string:Overview</command>
+      <action type="CHANGE_DESKTOP">
+        <direction>up</direction>
+        <animate>true</animate>
+        <animationPosition>up</animationPosition>
       </action>
     </gesture>
 
     <gesture type="SWIPE" fingers="4" direction="UP">
-      <action type="CHANGE_DESKTOP">
-        <direction>down</direction>
-        <animate>true</animate>
-        <animationPosition>auto</animationPosition>
+      <action type="RUN_COMMAND">
+        <on>begin</on>
+        <repeat>false</repeat>
+        <command>qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "ShowDesktopGrid"</command>
       </action>
     </gesture>
 
     <gesture type="SWIPE" fingers="4" direction="DOWN">
-      <action type="CHANGE_DESKTOP">
-        <direction>up</direction>
-        <animate>true</animate>
-        <animationPosition>auto</animationPosition>
+      <action type="RUN_COMMAND">
+        <on>begin</on>
+        <repeat>false</repeat>
+        <command>qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Expose"</command>
       </action>
     </gesture>
 
@@ -94,7 +92,7 @@
       <action type="CHANGE_DESKTOP">
         <direction>left</direction>
         <animate>true</animate>
-        <animationPosition>auto</animationPosition>
+        <animationPosition>left</animationPosition>
       </action>
     </gesture>
 
@@ -102,7 +100,7 @@
       <action type="CHANGE_DESKTOP">
         <direction>right</direction>
         <animate>true</animate>
-        <animationPosition>auto</animationPosition>
+        <animationPosition>right</animationPosition>
       </action>
     </gesture>
 
@@ -110,7 +108,7 @@
       <action type="RUN_COMMAND">
         <on>begin</on>
         <repeat>false</repeat>
-        <command>dbus-send --session --dest=org.kde.kglobalaccel --type=method_call /component/kwin org.kde.kglobalaccel.Component.invokeShortcut string:ShowDesktopGrid</command>
+        <command>qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Overview"</command>
       </action>
     </gesture>
 
@@ -118,7 +116,7 @@
       <action type="RUN_COMMAND">
         <on>begin</on>
         <repeat>false</repeat>
-        <command>dbus-send --session --dest=org.kde.kglobalaccel --type=method_call /component/kwin org.kde.kglobalaccel.Component.invokeShortcut string:ShowDesktopGrid</command>
+        <command>qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Overview"</command>
       </action>
     </gesture>
   </application>
