refine chromium flags

--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,21 +1,16 @@
---disable-features=HardwareMediaKeyHandling,UseChromeOSDirectVideoDecoder
---enable-features=OverlayScrollbar,OverlayScrollbarFlashAfterAnyScrollUpdate,OverlayScrollbarFlashWhenMouseEnter,VaapiVideoDecoder
-#,UseOzonePlatform
-#--ozone-platform=x11
+--disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,TabHoverCardImages
+# dead flags :-(
+#AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards
+--enable-features=OverlayScrollbar,CanvasOopRasterization,VaapiVideoDecoder,VaapiVideoEncoder,Vulkan,RawDraw
 --ozone-platform-hint=auto
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
 --ignore-gpu-blacklist
 --enable-gpu-rasterization
 --enable-zero-copy
 #--disable-gpu-driver-bug-workarounds
-#--enable-native-gpu-memory-buffers
-# Hardware video acceleration (XWayland)
---use-gl=desktop
-# Hardware video acceleration (Xorg)
+--enable-native-gpu-memory-buffers
 #--use-gl=egl
-#--enable-accelerated-video
-#--enable-accelerated-video-decode
-#--enable-accelerated-mjpeg-decode
+--use-gl=desktop
 # https://gist.github.com/foutrelis/14e339596b89813aa9c37fd1b4e5d9d5
 --oauth2-client-id=77185425430.apps.googleusercontent.com
 --oauth2-client-secret=OTJgUOQcT7lO7GsGZq2G4IlT
