--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,7 +1,13 @@
---disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,TabHoverCardImages
+--password-store=kwallet5
+--disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,TabHoverCardImages,UseChromeOSDirectVideoDecoder
+#
 # dead flags :-(
 #AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards
---enable-features=OverlayScrollbar,CanvasOopRasterization,VaapiVideoDecoder,VaapiVideoEncoder,Vulkan,RawDraw
+--enable-features=OverlayScrollbar,CanvasOopRasterization,VaapiVideoEncoder,VaapiVideoDecoder,RawDraw
+#,EnableDrDc,ForceGpuMainThreadToNormalPriorityDrDc
+#,VaapiIgnoreDriverChecks,VaapiVideoDecodeLinuxGL
+#,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
+#,UseOutOfProcessVideoDecoding
 --ozone-platform-hint=auto
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
 --ignore-gpu-blacklist
@@ -10,7 +16,6 @@
 #--disable-gpu-driver-bug-workarounds
 --enable-native-gpu-memory-buffers
 #--use-gl=egl
---use-gl=desktop
 # https://gist.github.com/foutrelis/14e339596b89813aa9c37fd1b4e5d9d5
 --oauth2-client-id=77185425430.apps.googleusercontent.com
 --oauth2-client-secret=OTJgUOQcT7lO7GsGZq2G4IlT
