--- a/.config/fontconfig/conf.d/10-replace.conf
+++ b/.config/fontconfig/conf.d/10-replace.conf
@@ -88,4 +88,13 @@
    <string>monospace</string>
   </edit>
  </match>
+
+ <match>
+  <test name="family" compare="contains">
+   <string>Droid Sans Mono</string>
+  </test>
+  <edit name="family" mode="assign_replace">
+   <string>Droid Sans Mono W01</string>
+  </edit>
+ </match>
 </fontconfig>
