--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -12,6 +12,8 @@
    <family>Noto Sans CJK SC</family>
    <family>PowerlineSymbols</family>
    <family>Symbols Nerd Font</family>
+   <family>HanaMinA</family>
+   <family>HanaMinB</family>
   </prefer>
  </alias>
  <!-- serif -->
@@ -24,6 +26,8 @@
    <family>Noto Serif CJK SC</family>
    <family>PowerlineSymbols</family>
    <family>Symbols Nerd Font</family>
+   <family>HanaMinA</family>
+   <family>HanaMinB</family>
   </prefer>
  </alias>
  <!-- monospace -->
