remove strong binding from fonts.conf

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,5 +1,5 @@
-<?xml version='1.0'?>
-<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
+<?xml version="1.0"?>
+<!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
  <!-- sans-serif -->
  <alias>
@@ -10,10 +10,6 @@
    <family>Blobmoji</family>
    <family>DejaVu Sans</family>
    <family>Noto Sans CJK SC</family>
-   <family>PowerlineSymbols</family>
-   <family>Symbols Nerd Font</family>
-   <family>HanaMinA</family>
-   <family>HanaMinB</family>
   </prefer>
  </alias>
  <!-- serif -->
@@ -24,26 +20,18 @@
    <family>Blobmoji</family>
    <family>DejaVu Serif</family>
    <family>Noto Serif CJK SC</family>
-   <family>PowerlineSymbols</family>
-   <family>Symbols Nerd Font</family>
-   <family>HanaMinA</family>
-   <family>HanaMinB</family>
   </prefer>
  </alias>
  <!-- monospace -->
- <match>
-  <test name="family">
-   <string>monospace</string>
-  </test>
-  <edit name="family" binding="strong" mode="prepend">
-   <string>Droid Sans Mono W01</string>
-   <string>Hack</string>
-   <string>DejaVu Sans Mono</string>
-   <string>Noto Sans Mono</string>
-   <string>Noto Sans Mono CJK SC</string>
-   <string>PowerlineSymbols</string>
-   <string>Symbols Nerd Font</string>
-   <string>Blobmoji</string>
-  </edit>
- </match>
+ <alias>
+  <family>monospace</family>
+  <prefer>
+   <family>Droid Sans Mono W01</family>
+   <family>Hack</family>
+   <family>Blobmoji</family>
+   <family>Noto Sans Mono</family>
+   <family>Noto Sans Mono CJK SC</family>
+   <family>Symbols Nerd Font Mono</family>
+  </prefer>
+ </alias>
 </fontconfig>
