--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,14 +1,15 @@
 --password-store=kwallet5
---disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,TabHoverCardImages,UseChromeOSDirectVideoDecoder
-#
+--disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,ChromeLabs,ReadAnything,CustomizeChromeSidePanel
+#,UseChromeOSDirectVideoDecoder
 # dead flags :-(
 #AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards
---enable-features=OverlayScrollbar,CanvasOopRasterization,VaapiVideoEncoder,VaapiVideoDecoder,RawDraw
-#,EnableDrDc,ForceGpuMainThreadToNormalPriorityDrDc
-#,VaapiIgnoreDriverChecks,VaapiVideoDecodeLinuxGL
+--enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL
+#,RawDraw
+#,VaapiIgnoreDriverChecks
 #,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
 #,UseOutOfProcessVideoDecoding
 --ozone-platform-hint=auto
+--enable-wayland-ime
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
 --ignore-gpu-blacklist
 --enable-gpu-rasterization
