--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -3,9 +3,8 @@
 #,UseChromeOSDirectVideoDecoder
 # dead flags :-(
 #AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards
---enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL
+--enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL,VaapiIgnoreDriverChecks
 #,RawDraw
-#,VaapiIgnoreDriverChecks
 #,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
 #,UseOutOfProcessVideoDecoding
 --ozone-platform-hint=auto
