--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,10 +1,8 @@
 --password-store=kwallet5
---disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,ChromeLabs,ReadAnything,CustomizeChromeSidePanel
-#,UseChromeOSDirectVideoDecoder
+--disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,ChromeLabs,ReadAnything
 # dead flags :-(
-#AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards
---enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL,VaapiIgnoreDriverChecks
-#,RawDraw
+#AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards,CustomizeChromeSidePanel
+--enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,RawDraw,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL,VaapiIgnoreDriverChecks
 #,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
 #,UseOutOfProcessVideoDecoding
 --ozone-platform-hint=auto
