--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -16,6 +16,7 @@
  <alias>
   <family>serif</family>
   <prefer>
+   <family>Roboto Serif</family>
    <family>Noto Serif</family>
    <family>Blobmoji</family>
    <family>DejaVu Serif</family>
