--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -2,9 +2,7 @@
 --disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,ChromeLabs,ReadAnything
 # dead flags :-(
 #AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards,CustomizeChromeSidePanel
---enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,RawDraw,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL,VaapiIgnoreDriverChecks
-#,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
-#,UseOutOfProcessVideoDecoding
+--enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,RawDraw,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL,VaapiIgnoreDriverChecks,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
 --ozone-platform-hint=auto
 --enable-wayland-ime
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
@@ -13,7 +11,6 @@
 --enable-zero-copy
 #--disable-gpu-driver-bug-workarounds
 --enable-native-gpu-memory-buffers
-#--use-gl=egl
 # https://gist.github.com/foutrelis/14e339596b89813aa9c37fd1b4e5d9d5
 --oauth2-client-id=77185425430.apps.googleusercontent.com
 --oauth2-client-secret=OTJgUOQcT7lO7GsGZq2G4IlT
