show download url in chromium

--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,5 +1,5 @@
 --password-store=kwallet5
---disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,ChromeLabs,ReadAnything
+--disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,ChromeLabs,ReadAnything,DownloadsPageReferrerUrl
 # dead flags :-(
 #AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards,CustomizeChromeSidePanel
 --enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,RawDraw,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL,VaapiIgnoreDriverChecks,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
