mpv uosc and customizations

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -6,16 +6,18 @@ hwdec=auto
 # needs env ENABLE_HDR_WSI=1
 # https://github.com/mpv-player/mpv/issues/13078
 # https://zamundaaa.github.io/wayland/2023/12/18/update-on-hdr-and-colormanagement-in-plasma.html
-#vo=gpu-next
-#gpu-api=vulkan
-#gpu-context=waylandvk
-#target-colorspace-hint=yes
+vo=gpu-next
+gpu-api=vulkan
+gpu-context=waylandvk
+target-colorspace-hint=yes
 ##### https://vcb-s.com/archives/7594
 #deband=yes
 #icc-profile-auto=yes
 #####
 keep-open=yes
-window-scale=0.5
-autofit-larger=40%
+autofit-larger=80%
 screenshot-directory=~/Pictures/Screenshots
 screenshot-template=Screenshot_%tY%tm%td_%tH%tM%tS_%03n
+
+osd-bar=no
+osd-fonts-dir=~~global/fonts
