update chromium flags
- RawDraw would make it can;'t render text
- With amdgpu, vaapi only works under Vulkan https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/26165

--- a/.config/chromium-flags.conf
+++ b/.config/chromium-flags.conf
@@ -1,10 +1,11 @@
---password-store=kwallet5
---disable-features=HardwareMediaKeyHandling,CopyLinkToText,LensStandalone,ChromeLabs,ReadAnything,DownloadsPageReferrerUrl
+--password-store=kwallet6
+--disable-features=HardwareMediaKeyHandling,LensStandalone,ChromeLabs,ReadAnything,DownloadsPageReferrerUrl,GlobalShortcutsPortal,FluentScrollbar
 # dead flags :-(
 #AvatarToolbarButton,ExtensionsToolbarMenu,TabSearch,SidePanel,TabHoverCards,CustomizeChromeSidePanel
---enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,RawDraw,VaapiVideoEncoder,VaapiVideoDecoder,VaapiVideoDecodeLinuxGL,VaapiIgnoreDriverChecks,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
+--enable-features=OverlayScrollbar,ParallelDownloading,CanvasOopRasterization,AcceleratedVideoEncoder,AcceleratedVideoDecoder,AcceleratedVideoDecodeLinuxGL,VaapiIgnoreDriverChecks,Vulkan,VulkanFromANGLE,DefaultANGLEVulkan
 --ozone-platform-hint=auto
 --enable-wayland-ime
+--wayland-text-input-version=1
 # https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration
 --ignore-gpu-blacklist
 --enable-gpu-rasterization
